--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path_provider: ^2.1.1
   path: ^1.8.3
   sqflite: ^2.3.0
+  location: ^5.0.3
 
 dev_dependencies:
   flutter_test:
