--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path: ^1.8.3
   sqflite: ^2.3.0
   location: ^5.0.3
+  google_maps_flutter: ^2.5.0
 
 dev_dependencies:
   flutter_test:
